# pyroll-pillar-model

./: .pytask.sqlite3  README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib  task_latex.py
docs/img/: task_pillar_disk_element.py  task_pillar_profile.py  task_pillar_profile_equidistant.py  task_pillar_profile_uniform.py
pyroll/: pillar_model.py
pyroll/pillar_model/: __init__.py  profile.py  report.py  roll_pass.py
pyroll/pillar_model/roll_pass/: __init__.py  pillar_disk_element.py  roll_pass.py
pyroll/pillar_model/roll_pass/hookimpls/: __init__.py  pillar_disk_element.py  profile.py  roll.py  roll_pass.py
tests/: test_default_flow_stress.py  test_material_flow.py  test_pillar_angles.py  test_pillar_boundaries.py  test_pillar_entry_angles.py  test_pillar_latitudinal_angles.py  test_pillar_latitudinal_angles_against_height_derivatives.py  test_pillar_longitudinal_angles.py  test_pillar_longitudinal_angles_against_height_derivatives.py  test_pillar_model.py  test_pillar_sections.py  test_pillar_strains.py  test_solve.py  test_solve_round_constricted_box.py  test_solve_round_flat.py  test_solve_round_oval.py  test_solve_round_oval_round.py  test_solve_square_oval.py
