[project]
name = "pyroll-pillar-model" # insert the name of yout plugin here
description = "Plugin for PyRoll providing ..." # edit the description
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause" # may be changed to your wishes
requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.0rc",
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
