[project]
name = "pyroll-pillar-model"
description = "Plugin for PyRolL providing basic data structures for discretization of a Profile and a RollPass into Pillar Elements. " # edit the description
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 3.0",
    "more-itertools ~= 9.0",
    "plotly",
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
